--- a/scss/main.scss
+++ b/scss/main.scss
@@ -120,6 +120,48 @@ header {
   }
 }
 
+/* LT資料 */
+#ltData {
+  .accordionBox {
+    margin: 20px;
+  }
+
+  .accordionTitle {
+    background: #f90;
+    display: block;
+    height: 40px;
+    color: #fff;
+    line-height: 40px;
+
+    &::before {
+      content: " ＋ ";
+    }
+
+    &:hover {
+      background: #f70;
+    }
+  }
+
+  .accordionItem {
+    display: none;
+    border-left: 1px solid #f90;
+    border-right: 1px solid #f90;
+
+    &:first-child {
+      padding-top: 10px;
+    }
+
+    &:last-child {
+      padding-bottom: 10px;
+      border-bottom: 1px solid #f90;
+    }
+
+    & > * {
+      padding-left: 20px;
+    }
+  }
+}
+
 /* Link */
 #link {
   p {
