--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,48 +5,47 @@
 
 /* 全体 */
 body {
+  background-color: #fff;
   width: 100%;
   font-family:"ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
-
-  &>* {
-    width: 1000px;
-    margin: 0 auto;
-  }
 }
 
 /* ヘッダー */
 header {
-  background: url("../img/rakuraku.png");
-  background-repeat: no-repeat;
-  display: table;
-  height: 150px;
+  background-color: rgba(245, 245, 245, 0.7);
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: rgba(9, 9, 9, 0.7) 0 0 3px 1px;
 
   #headTitle {
-    display: table-cell;
-    padding-left: 200px;
+    background: url("../img/rakuraku.png");
+    background-repeat: no-repeat;
+    background-size: 100px;
+    width: 500px;
+    margin: 0 auto;
+    padding-left: 120px;
     color: #f70;
     font-size: 70px;
     font-weight: bold;
-    vertical-align: bottom;
+    line-height: 100px;
   }
 }
 
 /* メニューバー */
 .navBar {
+  width: 80%;
   height: 50px;
+  margin: 100px auto 0;
 
-  &>* {
-    height: inherit;
-    float: left;
-
-    &:after {
+  &>.parentBox {
+    &::after {
       content: "";
       display: block;
       clear: both;
     }
-  }
-
-  &>.parentBox {
     &>.parentColumn {
       background: #f90;
       display: block;
@@ -72,6 +71,7 @@ header {
 
 /* コンテンツ全体 */
 #contents {
+  width: 80%;
   margin: 20px auto;
 
   &>section {
