--- a/scss/smartPhone.scss
+++ b/scss/smartPhone.scss
@@ -34,6 +34,13 @@ header {
     font-weight: bold;
     vertical-align: bottom;
   }
+
+  #headCurumi {
+    position: absolute;
+    top: 0;
+    left: 85%;
+    height: 90%;
+  }
 }
 
 /* メニューバー */
